repo: new plots added (2006-word-count), code: decode error inspect-results, url-ratio inspect-results

--- a/src/thesis_schneg/vis_descriptive_statistics.ipynb
+++ b/src/thesis_schneg/vis_descriptive_statistics.ipynb
@@ -47,8 +47,8 @@
     "# single_plot = False\n",
     "\n",
     "# save visualization or not\n",
-    "# save_vis: bool = False\n",
-    "save_vis: bool = True\n",
+    "save_vis: bool = False\n",
+    "# save_vis: bool = True\n",
     "\n",
     "# select dataset (if none is selected all datasets are visualized in a joint plot) \n",
     "dataset: DatasetName = None \n",
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,9 +360,9 @@
     "save_vis: bool = True\n",
     "\n",
     "# select dataset (if none is selected all datasets are visualized in a joint plot) \n",
-    "dataset: DatasetName = None \n",
+    "# dataset: DatasetName = None \n",
     "# dataset: DatasetName = 'aol'\n",
-    "# dataset: DatasetName = 'aql'\n",
+    "dataset: DatasetName = 'aql'\n",
     "# dataset: DatasetName = 'ms-marco'\n",
     "# dataset: DatasetName = 'orcas'\n",
     "\n",
@@ -373,12 +373,12 @@
     "struc_level = []\n",
     "struc_level.append('queries')\n",
     "# struc_level.append('named-entities')\n",
-    "struc_level.append('words')\n",
+    "# struc_level.append('words')\n",
     "\n",
     "base_analyses = []\n",
     "base_analyses.append('character-count-frequencies') #-{struc}\n",
     "# base_analyses.append('word-count-frequencies')\n",
-    "base_analyses.append('entity-count-frequencies')\n",
+    "# base_analyses.append('entity-count-frequencies')\n",
     "\n",
     "analyses = []\n",
     "for item in base_analyses:\n",
@@ -405,29 +405,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading data from aol dataset\n",
-      "aol loaded in 0.15055461724599203 min\n",
       "Loading data from aql dataset\n",
-      "aql loaded in 0.16994391679763793 min\n",
-      "Loading data from ms-marco dataset\n",
-      "ms-marco loaded in 0.07738089561462402 min\n",
-      "Loading data from orcas dataset\n",
-      "orcas loaded in 0.08665303389231364 min\n",
-      "Loading data from aol dataset\n",
-      "aol loaded in 0.006891783078511556 min\n",
-      "Loading data from aql dataset\n",
-      "aql loaded in 0.022438947359720865 min\n",
-      "Loading data from ms-marco dataset\n",
-      "ms-marco loaded in 0.01396629015604655 min\n",
-      "Loading data from orcas dataset\n",
-      "orcas loaded in 0.008340140183766684 min\n"
+      "aql loaded in 0.3852643569310506 min\n"
      ]
     }
    ],
@@ -449,6 +435,11 @@
     "            base_path = Path(\"/mnt/ceph/storage/data-in-progress/data-teaching/theses/thesis-schneg/analysis_data/analysis/aol-words-character-count-frequencies-special\")\n",
     "            paths[\"aol\"] = [path for path in base_path.iterdir(\n",
     "        )]\n",
+    "        if analysis_name == 'character-count-frequencies-queries':\n",
+    "            base_path = Path(\"/mnt/ceph/storage/data-in-progress/data-teaching/theses/thesis-schneg/analysis_data/analysis/aql-get-char-count-special\")\n",
+    "            paths[\"aql\"] = [path for path in base_path.iterdir(\n",
+    "        )]\n",
+    "            \n",
     "        # iterate over datasets and create visualization\n",
     "        for name, result_paths in paths.items():\n",
     "            start_time = time.time()\n",
@@ -492,17 +483,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Visualizing entity-count-frequencies-queries\n",
-      "[{'dataset-col-x': 'character-count', 'dataset-col-y': 'count()', 'x-label': 'Count', 'y-label': 'Frequency', 'x-lim': None, 'y-lim': None, 'title': 'Character per Word'}, {'dataset-col-x': 'entity-count', 'dataset-col-y': 'count()', 'x-label': 'Count', 'y-label': 'Frequency', 'x-lim': None, 'y-lim': None, 'title': 'Named Entity per Query'}]\n",
-      "Visualizing entity-count-frequencies-queries\n",
-      "[{'dataset-col-x': 'character-count', 'dataset-col-y': 'count()', 'x-label': 'Count', 'y-label': 'Frequency', 'x-lim': [-1, 32.25], 'y-lim': None, 'title': 'Character per Word'}, {'dataset-col-x': 'entity-count', 'dataset-col-y': 'count()', 'x-label': 'Count', 'y-label': 'Frequency', 'x-lim': None, 'y-lim': None, 'title': 'Named Entity per Query'}]\n"
+      "Visualizing character-count-frequencies-queries\n",
+      "[{'dataset-col-x': 'character-count', 'dataset-col-y': 'count()', 'x-label': 'Count', 'y-label': 'Frequency', 'x-lim': [0, 10], 'y-lim': None, 'title': 'Characters per Query'}]\n"
      ]
     }
    ],
@@ -513,25 +502,25 @@
     "import matplotlib\n",
     "import scienceplots\n",
     "\n",
-    "# analyses_params = []\n",
+    "analyses_params = []\n",
     "\n",
-    "# for item in base_analyses:\n",
-    "#     for struc in struc_level:\n",
-    "#         if struc == 'queries':\n",
-    "#             sub_title = \"Query\"\n",
-    "#         elif struc == 'named-entities':\n",
-    "#             sub_title = \"Named Entity\"\n",
-    "#         elif struc == 'words':\n",
-    "#             sub_title = \"Word\"\n",
+    "for item in base_analyses:\n",
+    "    for struc in struc_level:\n",
+    "        if struc == 'queries':\n",
+    "            sub_title = \"Query\"\n",
+    "        elif struc == 'named-entities':\n",
+    "            sub_title = \"Named Entity\"\n",
+    "        elif struc == 'words':\n",
+    "            sub_title = \"Word\"\n",
     "\n",
-    "#         # load visualization parametes into dictionary\n",
-    "#         if f\"{item}-{struc}\" == f'character-count-frequencies-{struc}':\n",
-    "#             vis_params = {\"dataset-col-x\": \"character-count\", \"dataset-col-y\": \"count()\", \"x-label\": \"Count\", \"y-label\": \"Frequency\", \"x-lim\": [0,10], \"y-lim\": None, \"title\": f\"Characters per {sub_title}\"}\n",
-    "#         elif f\"{item}-{struc}\" == f'word-count-frequencies-{struc}':\n",
-    "#             vis_params = {\"dataset-col-x\": \"word-count\", \"dataset-col-y\": \"count()\", \"x-label\": \"Count\", \"y-label\": \"Frequency\", \"x-lim\": [0,10], \"y-lim\": None, \"title\": f\"Words per {sub_title}\"}\n",
-    "#         elif f\"{item}-{struc}\" == f'entity-count-frequencies-{struc}':\n",
-    "#             vis_params = {\"dataset-col-x\": \"entity-count\", \"dataset-col-y\": \"count()\", \"x-label\": \"Count\", \"y-label\": \"Frequency\", \"x-lim\": [0,10], \"y-lim\": None, \"title\": f\"Named Entities per {sub_title}\"}\n",
-    "#         analyses_params.append(vis_params)\n",
+    "        # load visualization parametes into dictionary\n",
+    "        if f\"{item}-{struc}\" == f'character-count-frequencies-{struc}':\n",
+    "            vis_params = {\"dataset-col-x\": \"character-count\", \"dataset-col-y\": \"count()\", \"x-label\": \"Count\", \"y-label\": \"Frequency\", \"x-lim\": [0,10], \"y-lim\": None, \"title\": f\"Characters per {sub_title}\"}\n",
+    "        elif f\"{item}-{struc}\" == f'word-count-frequencies-{struc}':\n",
+    "            vis_params = {\"dataset-col-x\": \"word-count\", \"dataset-col-y\": \"count()\", \"x-label\": \"Count\", \"y-label\": \"Frequency\", \"x-lim\": [0,10], \"y-lim\": None, \"title\": f\"Words per {sub_title}\"}\n",
+    "        elif f\"{item}-{struc}\" == f'entity-count-frequencies-{struc}':\n",
+    "            vis_params = {\"dataset-col-x\": \"entity-count\", \"dataset-col-y\": \"count()\", \"x-label\": \"Count\", \"y-label\": \"Frequency\", \"x-lim\": [0,10], \"y-lim\": None, \"title\": f\"Named Entities per {sub_title}\"}\n",
+    "        analyses_params.append(vis_params)\n",
     "\n",
     "\n",
     "# latex rendering for matplotlib\n",
@@ -628,7 +617,7 @@
     "        # get xlim\n",
     "        xlims = []\n",
     "        for name, vis_data in result_data.items():\n",
-    "            xlims.append(get_xlim(vis_data, vis_params, threshold=0.054, bar_width=bar_width)[1]) #0.054\n",
+    "            xlims.append(get_xlim(vis_data, vis_params, threshold=0.015, bar_width=bar_width)[1]) #0.054\n",
     "        vis_params[\"x-lim\"] = [0-bar_width, max(xlims)]\n",
     "\n",
     "        if normalize_data:\n",
@@ -683,6 +672,241 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In *Characters per Word* we can observe an anomaly at the distribution of the AOL log. Words of lengths 10 - 20 appear to be more frequent than in the other logs. Let's try to replicate this anomaly in the AQL log. For this, we filter the AQL by the timestamp of the queries. We only take words from queries of the year 2006, i.e. the release year of the AOL log.\n",
+    "\n",
+    "In order to get the frequencies of word lengths in 2006 we need to run the following commands of our CLI:\n",
+    "1. `ray job submit --runtime-env ray-runtime-env.yml --no-wait -- python -m thesis_schneg analyser --dataset aql --analysis aql-get-words-2006 --read-concurrency 100 --concurrency 32 --write-concurrency 100 --memory-scaler 8 --batch-size 1024 `\n",
+    "\n",
+    "2. `ray job submit --runtime-env ray-runtime-env.yml --no-wait -- python -m thesis_schneg analyser --dataset aql --analysis get-lengths --struc-level words --read-concurrency 100 --concurrency 32 --write-concurrency 100 --memory-scaler 8 --batch-size 1024 --read-dir /mnt/ceph/storage/data-in-progress/data-teaching/theses/thesis-schneg/analysis_data/analysis/aql-aql-get-words-2006-all`\n",
+    "\n",
+    "3. `ray job submit --runtime-env ray-runtime-env.yml --no-wait -- python -m thesis_schneg analyser --dataset aql --analysis character-count-frequencies --read-concurrency 100 --concurrency 32 --write-concurrency 100 --memory-scaler 8 --batch-size 1024 --read-dir /mnt/ceph/storage/data-in-progress/data-teaching/theses/thesis-schneg/analysis_data/analysis/aql-get-lengths-words-special`  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from thesis_schneg.model import DatasetName\n",
+    "\n",
+    "##### set visualization configuration #####\n",
+    "\n",
+    "# save visualization or not\n",
+    "# save_vis: bool = False\n",
+    "save_vis: bool = True\n",
+    "\n",
+    "dataset: DatasetName = 'aql'\n",
+    "\n",
+    "struc_level = []\n",
+    "struc_level.append('words')\n",
+    "\n",
+    "base_analyses = []\n",
+    "base_analyses.append('character-count-frequencies') #-{struc}\n",
+    "\n",
+    "analyses = []\n",
+    "for item in base_analyses:\n",
+    "    for struc in struc_level:\n",
+    "        analyses.append(f'{item}-{struc}')\n",
+    "\n",
+    "# test_data = True\n",
+    "test_data = False\n",
+    "\n",
+    "normalize_data = True\n",
+    "# normalize_data = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading data from aql dataset\n",
+      "aql loaded in 0.0006647626558939616 min\n"
+     ]
+    }
+   ],
+   "source": [
+    "from thesis_schneg.vis_modules import _get_results_paths, load_results\n",
+    "from pathlib import Path\n",
+    "import time\n",
+    "color = None\n",
+    "label = None\n",
+    "# load data\n",
+    "analysis_data = []\n",
+    "for analysis_name in analyses:\n",
+    "\n",
+    "\n",
+    "    base_path = Path(\"/mnt/ceph/storage/data-in-progress/data-teaching/theses/thesis-schneg/analysis_data/analysis/aql-character-count-frequencies-special\")\n",
+    "    result_paths = [path for path in base_path.iterdir(\n",
+    "    )]\n",
+    "    start_time = time.time()\n",
+    "    print(f\"Loading data from {dataset} dataset\")\n",
+    "    result_data = {dataset: load_results(result_paths)}\n",
+    "    end_time = time.time()  \n",
+    "    print(f\"{dataset} loaded in {(end_time - start_time)/60} min\")\n",
+    "    analysis_data.append(result_data)   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "analyses_params = []\n",
+    "vis_params = {\"dataset-col-x\": \"character-count\", \"dataset-col-y\": \"count()\", \"x-label\": \"Count\",\n",
+    "              \"y-label\": \"Frequency\", \"x-lim\": None, \"y-lim\": None, \"title\": \"Character per Word\"}\n",
+    "analyses_params.append(vis_params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Visualizing character-count-frequencies-words\n",
+      "[{'dataset-col-x': 'character-count', 'dataset-col-y': 'count()', 'x-label': 'Count', 'y-label': 'Frequency', 'x-lim': None, 'y-lim': None, 'title': 'Character per Word'}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from thesis_schneg.vis_modules import bar_plot, get_xlim\n",
+    "from pathlib import Path\n",
+    "from matplotlib import pyplot as plt\n",
+    "import matplotlib\n",
+    "import scienceplots\n",
+    "\n",
+    "# latex rendering for matplotlib\n",
+    "matplotlib.rcParams.update(\n",
+    "    {\n",
+    "        \"pgf.texsystem\": \"pdflatex\",\n",
+    "        \"font.family\": \"serif\",\n",
+    "        \"text.usetex\": True,\n",
+    "        \"pgf.rcfonts\": False,\n",
+    "    }\n",
+    ")\n",
+    "\n",
+    "# set path to save visualization\n",
+    "\n",
+    "# vis_dir = Path(\n",
+    "#     f\"/home/benjamin/studium/masterarbeit/thesis-schneg/plots/aql-{analyses[0]}-2006\")\n",
+    "\n",
+    "vis_dir = Path(\n",
+    "    f\"/home/benjamin/studium/masterarbeit/thesis-schneg/plots/aql-{analyses[0]}-old-years\")\n",
+    "    \n",
+    "# vis_dir = Path(\n",
+    "#         f\"/home/benjamin/studium/masterarbeit/thesis-schneg/plots/extract-named-entities\")\n",
+    "\n",
+    "# make directory if it does not exist\n",
+    "if not vis_dir.exists() and save_vis:\n",
+    "        vis_dir.mkdir(parents=True)\n",
+    "\n",
+    "# enable pgf format for matplotlib\n",
+    "if save_vis:\n",
+    "    matplotlib.use(\"pgf\")\n",
+    "# use science style for plots from scienceplots library\n",
+    "plt.style.use([\"science\", \"grid\"])\n",
+    "\n",
+    "# create subplots for each dataset\n",
+    "# set size of plot\n",
+    "textwidth = 5.5129\n",
+    "aspect_ratio = 6/8\n",
+    "scale = 1.0\n",
+    "width = textwidth * scale\n",
+    "height = width * aspect_ratio\n",
+    "\n",
+    "bar_width = 0.5 \n",
+    "fig, ax = plt.subplots(ncols=1, nrows=1, figsize=(width, height))\n",
+    "for i in range(len(analyses)):   \n",
+    "    result_data = analysis_data[i]\n",
+    "    vis_params = analyses_params[i]\n",
+    "    print(f\"Visualizing {analysis_name}\")\n",
+    "    print(analyses_params)\n",
+    "    # create visualization for all data sets if dataset is not specified\n",
+    "\n",
+    "\n",
+    "\n",
+    "    # create visualization for a specific data set:\n",
+    "    multi = False \n",
+    "    # get xlim\n",
+    "    xlims = []\n",
+    "    for name, vis_data in result_data.items():\n",
+    "        xlims.append(get_xlim(vis_data, vis_params, threshold=0.01, bar_width=bar_width)[1]) #0.054\n",
+    "    vis_params[\"x-lim\"] = [0-bar_width, max(xlims)]\n",
+    "\n",
+    "    if normalize_data:\n",
+    "        vis_data[vis_params[\"dataset-col-y\"]] = vis_data[vis_params[\"dataset-col-y\"]] / \\\n",
+    "                vis_data[vis_params[\"dataset-col-y\"]].sum()\n",
+    "    \n",
+    "    vis_data = vis_data.sort_values(vis_params[\"dataset-col-x\"], ascending=True)\n",
+    "    \n",
+    "    # modify title\n",
+    "    vis_params[\"title\"] = f'{vis_params[\"title\"]} ({dataset.upper()})'\n",
+    "\n",
+    "    # set size of plot\n",
+    "    textwidth = 5.5129\n",
+    "    aspect_ratio = 6/8\n",
+    "    scale = 1.0\n",
+    "    width = textwidth * scale\n",
+    "    height = width * aspect_ratio\n",
+    "\n",
+    "    # # create subplot for dataset\n",
+    "    # fig, ax = plt.subplots(ncols=1, nrows=1, figsize=(width, height))\n",
+    "\n",
+    "    # apply specific visualization function\n",
+    "    fig, ax = bar_plot(data=vis_data, subplots=(fig, ax),\n",
+    "                                            vis_params=vis_params, multi=multi,  bar_width=bar_width)\n",
+    "    \n",
+    "    # # make layout tight\n",
+    "    # plt.tight_layout()\n",
+    "    \n",
+    "    # # either save visualization or show it\n",
+    "    # if save_vis:\n",
+    "    #     fig.savefig(vis_dir.joinpath(f\"{dataset}.pgf\"))\n",
+    "    # else:\n",
+    "    #     plt.show()\n",
+    "\n",
+    "if dataset is None:\n",
+    "    fig.supxlabel(analyses_params[0][\"x-label\"])\n",
+    "    fig.supylabel(analyses_params[0][\"y-label\"])\n",
+    "# make layout tight\n",
+    "plt.tight_layout()\n",
+    "\n",
+    "# either save visualization or show it  \n",
+    "if save_vis:\n",
+    "    if dataset is not None:\n",
+    "        if analyses[0] == 'character-count-frequencies-words' and dataset == 'aol' and cleaned_aol:\n",
+    "            fig.savefig(vis_dir.joinpath(f\"{dataset}-domains-cleaned.pgf\"))\n",
+    "        else: \n",
+    "            fig.savefig(vis_dir.joinpath(f\"{dataset}.pgf\"))\n",
+    "    else:\n",
+    "        fig.savefig(vis_dir.joinpath(\"all.pgf\"))\n",
+    "else:\n",
+    "    plt.show()\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
