--- a/thesis/chapter5.tex
+++ b/thesis/chapter5.tex
@@ -64,3 +64,17 @@ ing elit. Etiam lobortis facilisis sem.}
 \caption{Lorem ipsum dolor sit amet, consectetuer adipisc-
 ing elit. Etiam lobortis facilisis sem.}
 \end{figure} 
+
+\begin{figure}
+    \centering
+    \import{../plots/aql-character-count-frequencies-words-2006}{aql.pgf}
+    \caption{Lorem ipsum dolor sit amet, consectetuer adipisc-
+    ing elit. Etiam lobortis facilisis sem.}
+\end{figure} 
+
+\begin{figure}
+    \centering
+    \import{../plots/aql-character-count-frequencies-words-old-years}{aql.pgf}
+    \caption{Lorem ipsum dolor sit amet, consectetuer adipisc-
+    ing elit. Etiam lobortis facilisis sem.}
+\end{figure} 
