code: presidio-pii-detection added, thesis: first bit of analysis written

--- a/thesis/chapter4.tex
+++ b/thesis/chapter4.tex
@@ -1,5 +1,10 @@
 
-\chapter{Analysis/Methodology}
+\chapter{Analysis/Methodology}  
+
+\section{Descriptive Statistics/ Text-related statistics}
+
+In this section we generate a set of descriptive/text-related statistics from the query logs. The goal is to perform a comparison of the linguistic and grammatical composition of the query logs, neglecting semantical information of the queries.    
+Specifically, we perform a hypothesis test to determine if the syntactical differences between the AQL and the other query logs are statistically significant. For this analysis, we subdivide queries into different syntactical subcategories and measure the frequencies of these subcategories. We consider named entities, words and characters as syntactical subcategories.   
 \section{Characteristics-based}
 Here, various characteristics of the data sets are measured and displayed. The comparison of these characteristics should provide a first impression of the involved query logs' nature.
 
