thesis: new source added, category-related frequencies progressed

--- a/thesis/literature.bib
+++ b/thesis/literature.bib
@@ -66,6 +66,15 @@
   year      = {1958}
 }
 
+@article{piantadosi:2014,
+  author={Steven T. Piantadosi},
+  title={Zipf’s Word Frequency Law in Natural Language: A critical Review and Future Directions},
+  journal={Psychonomic Bulletin \& Review},
+  volume={21},
+  pages={1112--1130},
+  year={2014},
+  publisher={Springer}
+}
 %%% Finally, you will probably most often cite some conference papers; make sure to rather not fetch the cross-referenced BibTex entries from DBLP
 %%% Suggested change to the standard BibTeX entry: endash (--) for the date range of a conference (like in the pages field)
 @inproceedings{zuccon:2016,
