--- a/src/thesis_schneg/vis_descriptive_statistics.ipynb
+++ b/src/thesis_schneg/vis_descriptive_statistics.ipynb
@@ -370,11 +370,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from thesis_schneg.model import DatasetName, AnalysisName\n",
+    "from thesis_schneg.model import DatasetName\n",
     "\n",
     "##### set visualization configuration #####\n",
     "\n",
